# Semestralka-POS-Hadik

./: README.md
snake-ipc/: CMakeLists.txt
snake-ipc/docs/: README.txt
snake-ipc/include/: client.h  common.h  server.h
snake-ipc/maps/: example1.txt
snake-ipc/res/: snake_ipc_registry.txt
snake-ipc/src/: client.c  client_main.c  common.c  server.c  server_main.c
